--- a/Final_Retail_Sales_Prediction_Project_Supervised_Learning.ipynb
+++ b/Final_Retail_Sales_Prediction_Project_Supervised_Learning.ipynb
@@ -5367,263 +5367,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Iwf50b-R2tYG"
-      },
-      "source": [
-        "### 4. Textual Data Preprocessing\n",
-        "(It's mandatory for textual dataset i.e., NLP, Sentiment Analysis, Text Clustering etc.)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GMQiZwjn3iu7"
-      },
-      "source": [
-        "#### 1. Expand Contraction"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 242,
-      "metadata": {
-        "id": "PTouz10C3oNN"
-      },
-      "outputs": [],
-      "source": [
-        "# Expand Contraction\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WVIkgGqN3qsr"
-      },
-      "source": [
-        "#### 2. Lower Casing"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 174,
-      "metadata": {
-        "id": "88JnJ1jN3w7j"
-      },
-      "outputs": [],
-      "source": [
-        "# Lower Casing"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XkPnILGE3zoT"
-      },
-      "source": [
-        "#### 3. Removing Punctuations"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 175,
-      "metadata": {
-        "id": "vqbBqNaA33c0"
-      },
-      "outputs": [],
-      "source": [
-        "# Remove Punctuations"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Hlsf0x5436Go"
-      },
-      "source": [
-        "#### 4. Removing URLs & Removing words and digits contain digits."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 176,
-      "metadata": {
-        "id": "2sxKgKxu4Ip3"
-      },
-      "outputs": [],
-      "source": [
-        "# Remove URLs & Remove words and digits contain digits"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mT9DMSJo4nBL"
-      },
-      "source": [
-        "#### 5. Removing Stopwords & Removing White spaces"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 177,
-      "metadata": {
-        "id": "T2LSJh154s8W"
-      },
-      "outputs": [],
-      "source": [
-        "# Remove Stopwords"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 178,
-      "metadata": {
-        "id": "EgLJGffy4vm0"
-      },
-      "outputs": [],
-      "source": [
-        "# Remove White spaces"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c49ITxTc407N"
-      },
-      "source": [
-        "#### 6. Rephrase Text"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 179,
-      "metadata": {
-        "id": "foqY80Qu48N2"
-      },
-      "outputs": [],
-      "source": [
-        "# Rephrase Text"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OeJFEK0N496M"
-      },
-      "source": [
-        "#### 7. Tokenization"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 180,
-      "metadata": {
-        "id": "ijx1rUOS5CUU"
-      },
-      "outputs": [],
-      "source": [
-        "# Tokenization"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9ExmJH0g5HBk"
-      },
-      "source": [
-        "#### 8. Text Normalization"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 181,
-      "metadata": {
-        "id": "AIJ1a-Zc5PY8"
-      },
-      "outputs": [],
-      "source": [
-        "# Normalizing Text (i.e., Stemming, Lemmatization etc.)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cJNqERVU536h"
-      },
-      "source": [
-        "##### Which text normalization technique have you used and why?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Z9jKVxE06BC1"
-      },
-      "source": [
-        "Answer Here."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "k5UmGsbsOxih"
-      },
-      "source": [
-        "#### 9. Part of speech tagging"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 182,
-      "metadata": {
-        "id": "btT3ZJBAO6Ik"
-      },
-      "outputs": [],
-      "source": [
-        "# POS Taging"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "T0VqWOYE6DLQ"
-      },
-      "source": [
-        "#### 10. Text Vectorization"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 183,
-      "metadata": {
-        "id": "yBRtdhth6JDE"
-      },
-      "outputs": [],
-      "source": [
-        "# Vectorizing Text"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qBMux9mC6MCf"
-      },
-      "source": [
-        "##### Which text vectorization technique have you used and why?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "su2EnbCh6UKQ"
-      },
-      "source": [
-        "Answer Here."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-oLEiFgy-5Pf"
       },
       "source": [
@@ -8654,7 +8397,7 @@
         "id": "LcVmkcc9sNQX"
       },
       "source": [
-        "we will select random forest for our final predict because it give us the accurate model (95) accuracy of our model."
+        "We will select random forest for our final predict because it give us the accurate model (95) accuracy of our model."
       ]
     },
     {
